# gmailcopy

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
gmailcopy/: __main__.py  config.py  core.py  server.py
gmailcopy/templates/: base.html  email.html  listing.html
tests/: test_gmailcopy.py
